Fixed homepage blank area on small screens

--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -7,6 +7,7 @@
 }
 
 .homepage-content {
+  height: 100vh;
   padding-top: 50px;
   background-image: linear-gradient(
       to top,
